minor display fixes.
give the user proper directions.
prevent the user from selecting the body.
removed scrollbars.
fixed a height issue on firefox.

--- a/app.css
+++ b/app.css
@@ -1,3 +1,12 @@
+body {
+	overflow: hidden;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	height: 100%
+}
+
 .dot {
 	border: 10px solid blue;
 	border-radius: 10px;
